Am rezolvat filtrarea